[metadata]
name = QAMuditaHarness
description = Mudita harness utility
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/mudita/QAMuditaHarness
author = mudita
author_email = embedded@mudita.com,
license = BSD 3-clause
license_file = doc/LICENSE.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: MacOS X
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source = https://github.com/mudita/QAMuditaHarness
    Tracker = https://github.com/mudita/QAMuditaHarness/issues

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    attrs
    iniconfig
    pluggy
    pyparsing
    pyserial
    pytest
    pytest-order
    pytest-html
    six
    toml
    dataclasses_json
    eyed3
    tqdm
    wheel
python_requires = >=3.8
setup_requires =
    setuptools_scm

[bdist_wheel]
universal = 1

[aliases]
test=pytest
